GIScript/gen/GIScriptParser.cpp

// Generated from f:/C++/GIScriptEditor/GIScript/antlr/GIScript.g4 by ANTLR 4.13.2


#include "GIScriptListener.h"
#include "GIScriptVisitor.h"

#include "GIScriptParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct GIScriptParserStaticData final {
  GIScriptParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  GIScriptParserStaticData(const GIScriptParserStaticData&) = delete;
  GIScriptParserStaticData(GIScriptParserStaticData&&) = delete;
  GIScriptParserStaticData& operator=(const GIScriptParserStaticData&) = delete;
  GIScriptParserStaticData& operator=(GIScriptParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag giscriptParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<GIScriptParserStaticData> giscriptParserStaticData = nullptr;

void giscriptParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (giscriptParserStaticData != nullptr) {
    return;
  }
#else
  assert(giscriptParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<GIScriptParserStaticData>(
    std::vector<std::string>{
      "program", "event", "functionSign", "function", "parameterList", "parameter", 
      "builtinType", "genericType", "singleType", "tuple", "type", "block", 
      "statement", "varInit", "varDef", "return", "if", "while", "forInit", 
      "for", "forEach", "switch", "case", "default", "initializer", "initializerList", 
      "primary", "argumentList", "memberAccess", "functionCall", "increment", 
      "postfix", "cast", "unary", "multiplicative", "additive", "shift", 
      "relational", "equality", "and", "xor", "or", "logicalAnd", "logicalOr", 
      "conditional", "assignment", "expr"
    },
    std::vector<std::string>{
      "", "'event'", "'('", "')'", "'void'", "'global'", "','", "'int'", 
      "'float'", "'bool'", "'string'", "'entity'", "'vec'", "'guid'", "'<'", 
      "'prefab'", "'cfg'", "'faction'", "'>'", "'list'", "'map'", "'{'", 
      "'}'", "';'", "'break'", "'='", "'var'", "'return'", "'if'", "'else'", 
      "'while'", "'for'", "':'", "'switch'", "'case'", "'default'", "'null'", 
      "'true'", "'false'", "'this'", "'['", "']'", "'.'", "'as'", "'++'", 
      "'--'", "'-'", "'!'", "'~'", "'*'", "'/'", "'%'", "'+'", "'<<'", "'>>'", 
      "'>>>'", "'<='", "'>='", "'=='", "'!='", "'&'", "'^'", "'|'", "'&&'", 
      "'||'", "'\\u003F'", "'+='", "'-='", "'*='", "'/='"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "INT_DEF", "FLOAT_DEF", "STRING_DEF", "ID", "WS", "BLOCK_COMMENT", 
      "LINE_COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  giscriptParserStaticData = std::move(staticData);
}

}

GIScriptParser::GIScriptParser(TokenStream *input) : GIScriptParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

GIScriptParser::GIScriptParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  GIScriptParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *giscriptParserStaticData->atn, giscriptParserStaticData->decisionToDFA, giscriptParserStaticData->sharedContextCache, options);
}

GIScriptParser::~GIScriptParser() {
  delete _interpreter;
}

const atn::ATN& GIScriptParser::getATN() const {
  return *giscriptParserStaticData->atn;
}

std::string GIScriptParser::getGrammarFileName() const {
  return "GIScript.g4";
}

const std::vector<std::string>& GIScriptParser::getRuleNames() const {
  return giscriptParserStaticData->ruleNames;
}

const dfa::Vocabulary& GIScriptParser::getVocabulary() const {
  return giscriptParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView GIScriptParser::getSerializedATN() const {
  return giscriptParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

GIScriptParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<GIScriptParser::EventContext *> GIScriptParser::ProgramContext::event() {
  return getRuleContexts<GIScriptParser::EventContext>();
}

GIScriptParser::EventContext* GIScriptParser::ProgramContext::event(size_t i) {
  return getRuleContext<GIScriptParser::EventContext>(i);
}

std::vector<GIScriptParser::FunctionContext *> GIScriptParser::ProgramContext::function() {
  return getRuleContexts<GIScriptParser::FunctionContext>();
}

GIScriptParser::FunctionContext* GIScriptParser::ProgramContext::function(size_t i) {
  return getRuleContext<GIScriptParser::FunctionContext>(i);
}


size_t GIScriptParser::ProgramContext::getRuleIndex() const {
  return GIScriptParser::RuleProgram;
}

void GIScriptParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GIScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void GIScriptParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GIScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


std::any GIScriptParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GIScriptVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

GIScriptParser::ProgramContext* GIScriptParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, GIScriptParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(98);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 1589174) != 0)) {
      setState(96);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case GIScriptParser::T__0: {
          setState(94);
          event();
          break;
        }

        case GIScriptParser::T__1:
        case GIScriptParser::T__3:
        case GIScriptParser::T__4:
        case GIScriptParser::T__6:
        case GIScriptParser::T__7:
        case GIScriptParser::T__8:
        case GIScriptParser::T__9:
        case GIScriptParser::T__10:
        case GIScriptParser::T__11:
        case GIScriptParser::T__12:
        case GIScriptParser::T__18:
        case GIScriptParser::T__19: {
          setState(95);
          function();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(100);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- EventContext ------------------------------------------------------------------

GIScriptParser::EventContext::EventContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GIScriptParser::EventContext::ID() {
  return getToken(GIScriptParser::ID, 0);
}

GIScriptParser::BlockContext* GIScriptParser::EventContext::block() {
  return getRuleContext<GIScriptParser::BlockContext>(0);
}

GIScriptParser::ParameterListContext* GIScriptParser::EventContext::parameterList() {
  return getRuleContext<GIScriptParser::ParameterListContext>(0);
}


size_t GIScriptParser::EventContext::getRuleIndex() const {
  return GIScriptParser::RuleEvent;
}

void GIScriptParser::EventContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GIScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterEvent(this);
}

void GIScriptParser::EventContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GIScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitEvent(this);
}


std::any GIScriptParser::EventContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GIScriptVisitor*>(visitor))
    return parserVisitor->visitEvent(this);
  else
    return visitor->visitChildren(this);
}

GIScriptParser::EventContext* GIScriptParser::event() {
  EventContext *_localctx = _tracker.createInstance<EventContext>(_ctx, getState());
  enterRule(_localctx, 2, GIScriptParser::RuleEvent);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(101);
    match(GIScriptParser::T__0);
    setState(102);
    match(GIScriptParser::ID);
    setState(103);
    match(GIScriptParser::T__1);
    setState(105);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 1589124) != 0)) {
      setState(104);
      parameterList();
    }
    setState(107);
    match(GIScriptParser::T__2);
    setState(108);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionSignContext ------------------------------------------------------------------

GIScriptParser::FunctionSignContext::FunctionSignContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GIScriptParser::FunctionSignContext::ID() {
  return getToken(GIScriptParser::ID, 0);
}

GIScriptParser::TypeContext* GIScriptParser::FunctionSignContext::type() {
  return getRuleContext<GIScriptParser::TypeContext>(0);
}

GIScriptParser::ParameterListContext* GIScriptParser::FunctionSignContext::parameterList() {
  return getRuleContext<GIScriptParser::ParameterListContext>(0);
}


size_t GIScriptParser::FunctionSignContext::getRuleIndex() const {
  return GIScriptParser::RuleFunctionSign;
}

void GIScriptParser::FunctionSignContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GIScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunctionSign(this);
}

void GIScriptParser::FunctionSignContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GIScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunctionSign(this);
}


std::any GIScriptParser::FunctionSignContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GIScriptVisitor*>(visitor))
    return parserVisitor->visitFunctionSign(this);
  else
    return visitor->visitChildren(this);
}

GIScriptParser::FunctionSignContext* GIScriptParser::functionSign() {
  FunctionSignContext *_localctx = _tracker.createInstance<FunctionSignContext>(_ctx, getState());
  enterRule(_localctx, 4, GIScriptParser::RuleFunctionSign);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(112);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case GIScriptParser::T__3: {
        setState(110);
        match(GIScriptParser::T__3);
        break;
      }

      case GIScriptParser::T__1:
      case GIScriptParser::T__6:
      case GIScriptParser::T__7:
      case GIScriptParser::T__8:
      case GIScriptParser::T__9:
      case GIScriptParser::T__10:
      case GIScriptParser::T__11:
      case GIScriptParser::T__12:
      case GIScriptParser::T__18:
      case GIScriptParser::T__19: {
        setState(111);
        type();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    setState(114);
    match(GIScriptParser::ID);
    setState(115);
    match(GIScriptParser::T__1);
    setState(117);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 1589124) != 0)) {
      setState(116);
      parameterList();
    }
    setState(119);
    match(GIScriptParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionContext ------------------------------------------------------------------

GIScriptParser::FunctionContext::FunctionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GIScriptParser::FunctionSignContext* GIScriptParser::FunctionContext::functionSign() {
  return getRuleContext<GIScriptParser::FunctionSignContext>(0);
}

GIScriptParser::BlockContext* GIScriptParser::FunctionContext::block() {
  return getRuleContext<GIScriptParser::BlockContext>(0);
}


size_t GIScriptParser::FunctionContext::getRuleIndex() const {
  return GIScriptParser::RuleFunction;
}

void GIScriptParser::FunctionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GIScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunction(this);
}

void GIScriptParser::FunctionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GIScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunction(this);
}


std::any GIScriptParser::FunctionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GIScriptVisitor*>(visitor))
    return parserVisitor->visitFunction(this);
  else
    return visitor->visitChildren(this);
}

GIScriptParser::FunctionContext* GIScriptParser::function() {
  FunctionContext *_localctx = _tracker.createInstance<FunctionContext>(_ctx, getState());
  enterRule(_localctx, 6, GIScriptParser::RuleFunction);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(122);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == GIScriptParser::T__4) {
      setState(121);
      match(GIScriptParser::T__4);
    }
    setState(124);
    functionSign();
    setState(125);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParameterListContext ------------------------------------------------------------------

GIScriptParser::ParameterListContext::ParameterListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<GIScriptParser::ParameterContext *> GIScriptParser::ParameterListContext::parameter() {
  return getRuleContexts<GIScriptParser::ParameterContext>();
}

GIScriptParser::ParameterContext* GIScriptParser::ParameterListContext::parameter(size_t i) {
  return getRuleContext<GIScriptParser::ParameterContext>(i);
}


size_t GIScriptParser::ParameterListContext::getRuleIndex() const {
  return GIScriptParser::RuleParameterList;
}

void GIScriptParser::ParameterListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GIScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParameterList(this);
}

void GIScriptParser::ParameterListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GIScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParameterList(this);
}


std::any GIScriptParser::ParameterListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GIScriptVisitor*>(visitor))
    return parserVisitor->visitParameterList(this);
  else
    return visitor->visitChildren(this);
}

GIScriptParser::ParameterListContext* GIScriptParser::parameterList() {
  ParameterListContext *_localctx = _tracker.createInstance<ParameterListContext>(_ctx, getState());
  enterRule(_localctx, 8, GIScriptParser::RuleParameterList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(127);
    parameter();
    setState(132);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == GIScriptParser::T__5) {
      setState(128);
      match(GIScriptParser::T__5);
      setState(129);
      parameter();
      setState(134);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParameterContext ------------------------------------------------------------------

GIScriptParser::ParameterContext::ParameterContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GIScriptParser::TypeContext* GIScriptParser::ParameterContext::type() {
  return getRuleContext<GIScriptParser::TypeContext>(0);
}

tree::TerminalNode* GIScriptParser::ParameterContext::ID() {
  return getToken(GIScriptParser::ID, 0);
}


size_t GIScriptParser::ParameterContext::getRuleIndex() const {
  return GIScriptParser::RuleParameter;
}

void GIScriptParser::ParameterContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GIScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParameter(this);
}

void GIScriptParser::ParameterContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GIScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParameter(this);
}


std::any GIScriptParser::ParameterContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GIScriptVisitor*>(visitor))
    return parserVisitor->visitParameter(this);
  else
    return visitor->visitChildren(this);
}

GIScriptParser::ParameterContext* GIScriptParser::parameter() {
  ParameterContext *_localctx = _tracker.createInstance<ParameterContext>(_ctx, getState());
  enterRule(_localctx, 10, GIScriptParser::RuleParameter);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(135);
    type();
    setState(136);
    match(GIScriptParser::ID);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BuiltinTypeContext ------------------------------------------------------------------

GIScriptParser::BuiltinTypeContext::BuiltinTypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t GIScriptParser::BuiltinTypeContext::getRuleIndex() const {
  return GIScriptParser::RuleBuiltinType;
}

void GIScriptParser::BuiltinTypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GIScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBuiltinType(this);
}

void GIScriptParser::BuiltinTypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GIScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBuiltinType(this);
}


std::any GIScriptParser::BuiltinTypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GIScriptVisitor*>(visitor))
    return parserVisitor->visitBuiltinType(this);
  else
    return visitor->visitChildren(this);
}

GIScriptParser::BuiltinTypeContext* GIScriptParser::builtinType() {
  BuiltinTypeContext *_localctx = _tracker.createInstance<BuiltinTypeContext>(_ctx, getState());
  enterRule(_localctx, 12, GIScriptParser::RuleBuiltinType);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(148);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case GIScriptParser::T__6: {
        enterOuterAlt(_localctx, 1);
        setState(138);
        match(GIScriptParser::T__6);
        break;
      }

      case GIScriptParser::T__7: {
        enterOuterAlt(_localctx, 2);
        setState(139);
        match(GIScriptParser::T__7);
        break;
      }

      case GIScriptParser::T__8: {
        enterOuterAlt(_localctx, 3);
        setState(140);
        match(GIScriptParser::T__8);
        break;
      }

      case GIScriptParser::T__9: {
        enterOuterAlt(_localctx, 4);
        setState(141);
        match(GIScriptParser::T__9);
        break;
      }

      case GIScriptParser::T__10: {
        enterOuterAlt(_localctx, 5);
        setState(142);
        match(GIScriptParser::T__10);
        break;
      }

      case GIScriptParser::T__11: {
        enterOuterAlt(_localctx, 6);
        setState(143);
        match(GIScriptParser::T__11);
        break;
      }

      case GIScriptParser::T__12: {
        enterOuterAlt(_localctx, 7);
        setState(144);
        match(GIScriptParser::T__12);
        setState(145);
        match(GIScriptParser::T__13);
        setState(146);
        antlrcpp::downCast<BuiltinTypeContext *>(_localctx)->con = _input->LT(1);
        _la = _input->LA(1);
        if (!((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & 231424) != 0))) {
          antlrcpp::downCast<BuiltinTypeContext *>(_localctx)->con = _errHandler->recoverInline(this);
        }
        else {
          _errHandler->reportMatch(this);
          consume();
        }
        setState(147);
        match(GIScriptParser::T__17);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GenericTypeContext ------------------------------------------------------------------

GIScriptParser::GenericTypeContext::GenericTypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<GIScriptParser::BuiltinTypeContext *> GIScriptParser::GenericTypeContext::builtinType() {
  return getRuleContexts<GIScriptParser::BuiltinTypeContext>();
}

GIScriptParser::BuiltinTypeContext* GIScriptParser::GenericTypeContext::builtinType(size_t i) {
  return getRuleContext<GIScriptParser::BuiltinTypeContext>(i);
}


size_t GIScriptParser::GenericTypeContext::getRuleIndex() const {
  return GIScriptParser::RuleGenericType;
}

void GIScriptParser::GenericTypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GIScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGenericType(this);
}

void GIScriptParser::GenericTypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GIScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGenericType(this);
}


std::any GIScriptParser::GenericTypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GIScriptVisitor*>(visitor))
    return parserVisitor->visitGenericType(this);
  else
    return visitor->visitChildren(this);
}

GIScriptParser::GenericTypeContext* GIScriptParser::genericType() {
  GenericTypeContext *_localctx = _tracker.createInstance<GenericTypeContext>(_ctx, getState());
  enterRule(_localctx, 14, GIScriptParser::RuleGenericType);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(162);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case GIScriptParser::T__18: {
        enterOuterAlt(_localctx, 1);
        setState(150);
        match(GIScriptParser::T__18);
        setState(151);
        match(GIScriptParser::T__13);
        setState(152);
        antlrcpp::downCast<GenericTypeContext *>(_localctx)->t = builtinType();
        setState(153);
        match(GIScriptParser::T__17);
        break;
      }

      case GIScriptParser::T__19: {
        enterOuterAlt(_localctx, 2);
        setState(155);
        match(GIScriptParser::T__19);
        setState(156);
        match(GIScriptParser::T__13);
        setState(157);
        antlrcpp::downCast<GenericTypeContext *>(_localctx)->k = builtinType();
        setState(158);
        match(GIScriptParser::T__5);
        setState(159);
        antlrcpp::downCast<GenericTypeContext *>(_localctx)->v = builtinType();
        setState(160);
        match(GIScriptParser::T__17);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SingleTypeContext ------------------------------------------------------------------

GIScriptParser::SingleTypeContext::SingleTypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GIScriptParser::BuiltinTypeContext* GIScriptParser::SingleTypeContext::builtinType() {
  return getRuleContext<GIScriptParser::BuiltinTypeContext>(0);
}

GIScriptParser::GenericTypeContext* GIScriptParser::SingleTypeContext::genericType() {
  return getRuleContext<GIScriptParser::GenericTypeContext>(0);
}


size_t GIScriptParser::SingleTypeContext::getRuleIndex() const {
  return GIScriptParser::RuleSingleType;
}

void GIScriptParser::SingleTypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GIScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSingleType(this);
}

void GIScriptParser::SingleTypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GIScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSingleType(this);
}


std::any GIScriptParser::SingleTypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GIScriptVisitor*>(visitor))
    return parserVisitor->visitSingleType(this);
  else
    return visitor->visitChildren(this);
}

GIScriptParser::SingleTypeContext* GIScriptParser::singleType() {
  SingleTypeContext *_localctx = _tracker.createInstance<SingleTypeContext>(_ctx, getState());
  enterRule(_localctx, 16, GIScriptParser::RuleSingleType);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(166);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case GIScriptParser::T__6:
      case GIScriptParser::T__7:
      case GIScriptParser::T__8:
      case GIScriptParser::T__9:
      case GIScriptParser::T__10:
      case GIScriptParser::T__11:
      case GIScriptParser::T__12: {
        enterOuterAlt(_localctx, 1);
        setState(164);
        builtinType();
        break;
      }
